@@ -122,7 +122,7 @@ void free_token(TOKEN * tkn)
         tkn->value.string = NULL;
         break;
     }
-    
+
     free(tkn);
   }
 }
@@ -149,15 +149,29 @@ TOKEN * number(char * text)
 
   tkn = new_token(TKN_NUMBER);
   tkn->value.type   = V_NUM;
-  tkn->value.number = atof(text);
+  tkn->value.number = atoi(text);
 
 #if DEBUG
-  fprintf(stderr, "NUMBER(%g)\n", tkn->value.number);
+  fprintf(stderr, "NUMBER(%d)\n", tkn->value.number);
 #endif
 
   return tkn;
 }
 
+TOKEN * number_real(char * text)
+{
+  struct token_t * tkn;
+
+  tkn = new_token(TKN_NUMBER);
+  tkn->value.type   = V_NUM_REAL;
+  tkn->value.number_real = atof(text);
+
+#if DEBUG
+  fprintf(stderr, "NUMBER(%g)\n", tkn->value.number_real);
+#endif
+
+  return tkn;
+}
 
 TOKEN * hexnumber(char * text)
 {
@@ -223,16 +237,20 @@ void print_token(TOKEN * tkn)
 
   fprintf(stderr, "token = %d = ", tkn->primary);
   switch (tkn->value.type) {
-    case V_NUM: 
-      fprintf(stderr, "NUMBER, value=%g", tkn->value.number); 
+    case V_NUM:
+      fprintf(stderr, "NUMBER, value=%d", tkn->value.number);
       break;
 
-    case V_STR: 
-      fprintf(stderr, "STRING, value=%s", tkn->value.string); 
+    case V_NUM_REAL:
+      fprintf(stderr, "NUMBER, value=%g", tkn->value.number_real);
       break;
 
-    default: 
-      fprintf(stderr, "<other>"); 
+    case V_STR:
+      fprintf(stderr, "STRING, value=%s", tkn->value.string);
+      break;
+
+    default:
+      fprintf(stderr, "<other>");
       break;
   }
 
